Height Issues with dropdown menu - v3.7.1
- Fixed issue with search history dropdown menu being too long, after a certain amount, added a max height according to 25% of the view height.

--- a/ROKAcademy/WebApp/Pages/Index.razor.css
+++ b/ROKAcademy/WebApp/Pages/Index.razor.css
@@ -8,6 +8,13 @@
     }
 }
 
+/* Scrolling dropdown menu */
+.scrollable-dropdown-menu {
+    height: auto;
+    max-height: 25vh;
+    overflow-y: scroll;
+}
+
 .table-responsive {
     max-height: 35rem !important;
     padding-right: .25em;
